<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/keyline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="16dp"
        android:text="@string/keyline_grid_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Switch
        android:id="@+id/action_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="" />

    <TextView
        android:id="@+id/dplines_horiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="16dp"
        android:text="@string/dplines_horiz_label"
        app:layout_constraintTop_toBottomOf="@+id/keyline_title"
        app:layout_constraintStart_toStartOf="parent" />
    <Switch
        android:id="@+id/dplines_horiz_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/action_switch"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="" />

    <TextView
        android:id="@+id/dplines_vert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="16dp"
        android:text="@string/dplines_vert_label"
        app:layout_constraintTop_toBottomOf="@+id/dplines_horiz_title"
        app:layout_constraintStart_toStartOf="parent" />
    <Switch
        android:id="@+id/dplines_vert_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dplines_horiz_switch"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="" />

    <TextView
        android:id="@+id/ruler_horiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="16dp"
        android:text="@string/ruler_horiz_label"
        app:layout_constraintTop_toBottomOf="@+id/dplines_vert_title"
        app:layout_constraintStart_toStartOf="parent" />
    <Switch
        android:id="@+id/ruler_horiz_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dplines_vert_switch"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="" />

    <TextView
        android:id="@+id/ruler_vert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="16dp"
        android:text="@string/ruler_vert_label"
        app:layout_constraintTop_toBottomOf="@+id/ruler_horiz_title"
        app:layout_constraintStart_toStartOf="parent" />
    <Switch
        android:id="@+id/ruler_vert_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ruler_horiz_switch"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/title_barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyline_title"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="keyline_title, action_switch"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_barrier"
        app:layout_constraintBottom_toBottomOf="parent">
        <fragment
            android:name="uk.co.barbuzz.keylines.ui.SettingsFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
